# dfp_external_storage

./: README.md  app_cleanup.py  dropbox_integration.py  install_dropbox.py  install_gdrive.py  install_hooks.py  onedrive_integration.py  pyproject.toml  pyrightconfig.json  reconnect.py  requirements.txt  setup.py  uninstall.py  uninstall_helper.py
.github/: FUNDING.yml
dfp_external_storage/: api.py  gdrive_integration.py  hooks.py  install.py  install_hooks.py  install_onedrive.py  uninstall.py
dfp_external_storage/dfp_external_storage/doctype/dfp_external_storage/: dfp_external_storage.js  dfp_external_storage.json  dfp_external_storage.py
dfp_external_storage/dfp_external_storage/page/dfp_s3_bucket_list/: dfp_s3_bucket_list.js  dfp_s3_bucket_list.py  list.html
dfp_external_storage/locale/: main.pot
dfp_external_storage/public/js/: api.js  app.js  dfp_external_storage.app.bundle.js  file_uploader.js
dfp_external_storage/public/scss/: app.scss
docs/: README.md  dropbox.md  dropbox_integration.md  google_drive.md  google_drive_integration.md  onedrive.md  onedrive_integration.md  reconnect_guide.md  uninstall_guide.md
