[project]
name = "dfp_external_storage"
authors = [
    { name = "DevelopmentForPeople", email = "developmentforpeople@gmail.com"}
]
description = "S3 compatible external storage for Frappe and ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "boto3>=1.34.0" # Add this line for AWS S3 support
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[project.urls]
Homepage = "https://github.com/developmentforpeople/dfp_external_storage"
Repository = "https://github.com/developmentforpeople/dfp_external_storage.git"
"Bug Reports" = "https://github.com/developmentforpeople/dfp_external_storage/issues"
